# Ubersetzer-v2

./: .gitignore  Cargo.toml  README.md  api_key.txt
src/: main.rs  translation_and_api.rs
